Added new parts to the process analysis

--- a/process-analysis/sections/documentation.tex
+++ b/process-analysis/sections/documentation.tex
@@ -1,3 +1,5 @@
--- Description here --
+During the first weeks of the project work, we created all signed a group contract, to ensure we all lived up to each others expectations. The supervisors also requested a contract, to work as agreement of expectations. An additional contract was then created later during project, which will be discussed during the \textit{Group Work} section.\\
+Everything that took place during our strategy meetings were noted down and added to our project wiki. Pictures of prototypes, observations or of the blackboard were all added to the facebook group, to ensure the information was accessible at all times.\\
+The testing phase was documented using a mixture of  pictures and video recordings of our different experiments.
 
 \section{Discussion and Conclusion}
