Forgot a section for methods and models

--- a/process-analysis/sections/methods-and-models.tex
+++ b/process-analysis/sections/methods-and-models.tex
@@ -1,3 +1,10 @@
--- Description here --
+A few different methods and models were used during our P2 project. We used peer-reviewing after every major change to the report, where each group member read through the whole report to and gave feedback on what worked and what did not. The blackboard in the group room was always in use for visualization for different concepts or explanations, and the board was also used to keep track of different dates and important deadlines.\\
+Prototyping was a massive part of our development phase, where we used breadboards to prototype our circuits before creating the final versions.\\
+We also used a sequence diagram, 6W diagram and flow charts to visualize parts of the report but also our thinking process.
 
+Other methods and models will be discussed in the \textit{Time and Resource Management} section. 
 \section{Discussion and Conclusion}
+
+During the initial part of our project we attempted to use the 6W-diagram for our problem analysis. The diagram pointed us in the proper direction and helped form our scope.\\
+Our project report was written as separate chapters, after each chapter we would do peer-reviewing to ensure that our project work was at the level of what was expected by the university. Peer-reviewing helped us maintain consistency throughout the entire report and helped us keep track of what parts needed improving or modifying before the next reviewing sessions.\\
+We used flow charts and sequence diagrams the visualize critical parts of our development and final product. The diagrams were used to help the reader understand the different processes. 
