--- a/report/sections/ch6-discussion.tex
+++ b/report/sections/ch6-discussion.tex
@@ -30,4 +30,4 @@ Changing the algorithm to something more similar to the one stated above, would 
 
 The rover is currently operated by using four DC motors with regular rubber wheels mounted to them. Currently we do not have precise control over how far the rover moves each time it is powered on, although we have encoders mounted on the two front wheels. To increase the accuracy of the distance moved, encoders for the DC motors could have been used to determine the distance travelled. The rover also does not turn consistently each time, which is either an issue with uneven weight distribution on the rover or because of inaccuracy with the signalling. In terms of improving how well the rover turns, the rover needs to be balanced and the amount each wheels turns by cycle needs to be determined. Another possible solution for the turning inconsistency is using tracks for movement instead of four independently operated wheels. Tracks would have a larger guarantee of on-site turning.
 
-Too much time during this project was spent chasing the idea of getting SLAM to work. It was a bad combination of tools, because it seems like ROS is made for more advanced computing units, with better interfacing.
+Too much time during this project was spent chasing the idea of getting SLAM to work. It was a bad combination of tools, because it seems like that ROS was made for desktop computing and its only recently since embedded systems became powerful enough and compatible to run ROS.
