--- a/report/sections/ch7-conclusion.tex
+++ b/report/sections/ch7-conclusion.tex
@@ -1,1 +1,11 @@
-Conclusion 
+%test results/general - Did we met the hypothesis?
+Based on the test results, we can conclude that our hypothesis was not covered completely, although it is capable of creating a 2D map of its surroundings, it does not use that data for navigating the maze and finding its path from A to B. Our hypothesis still stands correct and it is doable with more time and resources at hand.
+
+%laser - Was it a good choice or not? Why?
+The laser of choice for the prototype seemed to be a good fit, but it does come with certain limitations compared to a higher-end model, like USB-support for faster data transfer, better refresh rate and acquisition rate. We have to keep in mind although that it comes with limitations, it does it job in creating a 2D map at quite an inexpensive cost.
+
+%SLAM - Was it the right direction/technique?
+
+%autonomous navigation/collision-detection - What happened? What did we do?
+
+%summary - Are we satisfied with the results?
