--- a/report/sections/ch7-conclusion.tex
+++ b/report/sections/ch7-conclusion.tex
@@ -5,6 +5,7 @@ Based on the test results, we can conclude that our hypothesis was not covered c
 The laser of choice for the prototype seemed to be a good fit, but it does come with certain limitations compared to a higher-end model, like USB-support for faster data transfer, better refresh rate and acquisition rate. We have to keep in mind although that it comes with limitations, it does it job in creating a 2D map at quite an inexpensive cost.
 
 %SLAM - Was it the right direction/technique?
+Mapping based on multiple sets of measurements, taken from different locations, is an incredibly difficlut thing to do. It makes no sense to try and reinvent the wheel, as there are plenty of mapping libraries that are already usable. We choose to use SLAM, and we choose SLAM because it is simultaneus, meaning the processing of the data, mapping, and navigating all go hand in hand. This is the best suited approach for mapping unknown, unaccessable terrain. However, our particular choice of SLAM library did not go very well with our choice of hardware, at least in the time frame we had for the project.
 
 %autonomous navigation/collision-detection - What happened? What did we do?
 
