--- a/report/sections/ch7-conclusion.tex
+++ b/report/sections/ch7-conclusion.tex
@@ -1,5 +1,5 @@
 %test results/general - Did we met the hypothesis?
-Based on the test results, we can conclude that our hypothesis was not covered completely, although it is capable of creating a 2D map of its surroundings, it does not use that data for navigating the maze and finding its path from A to B. Our hypothesis still stands correct and it is doable with more time and resources at hand.
+Based on the test results, we can conclude that our hypothesis was not covered completely, although the prototype is capable of creating a 2D map of its surroundings, it does not use that data for navigating the maze and finding its path from A to B. Our hypothesis still stands correct and it is doable with more time and resources at hand.
 
 %laser - Was it a good choice or not? Why?
 The laser of choice for the prototype seemed to be a good fit, but it does come with certain limitations compared to a higher-end model, like USB-support for faster data transfer, better refresh rate and acquisition rate. We have to keep in mind although that it comes with limitations, it does it job in creating a 2D map at quite an inexpensive cost.
@@ -10,3 +10,4 @@ Mapping based on multiple sets of measurements, taken from different locations, 
 %autonomous navigation/collision-detection - What happened? What did we do?
 After realizing that getting the mapping part of our prototype to work required more effort than first expected, the scope for the rover navigation was made much smaller. Instead of a highly intelligent autonomous system, the autonomous navigation turned out to become a close proximity detection system. This system adds a low level of intelligence to the rover, which makes it avoid objects in its path and change the direction accordingly. 
 %summary - Are we satisfied with the results?
+Breaking down the prototype into two separate modules did help us to progress faster with the development, and these could be used as building blocks towards another future project that would take this topic into the next level, where the SLAM technique could be used on a moving rover and processing that information for navigational purposes. Even though we might have not covered all the points in our hypothesis, we did succeed to generate a 2D map using SLAM with a stationary camera and therefore meeting our main goal of creating a map. 
