--- a/report/sections/appendix.tex
+++ b/report/sections/appendix.tex
@@ -1,7 +1,9 @@
-\section{Code for close proximity detection}
+\section{Code for close proximity detection}\label{code:proximity-full}
 \lstinputlisting[firstline=1, lastline=161, title=getdist(), language=Python, label=obs-avoid-code]{../code/autonomous-rover/obstacle-avoidance-args.py}
-\pagebreak
-\section{Code of laser sensor module}
+
+\clearpage
+
+\section{Code of laser sensor module}\label{code:laser-full}
 \lstinputlisting[firstline=37, title=mainCode.cpp, language=C++]{../code/laser_scan_publisher_tutorial/src/laser_scan_publisher.cpp}
 
 %TODO: Any more code to add?
