--- a/report/sections/ch4-controller.tex
+++ b/report/sections/ch4-controller.tex
@@ -14,8 +14,7 @@ During the initial stages of using ROS we attempted to get the installation up a
 
 After the installation of the Raspbian operating system, we installed the Indigo distribution of ROS, a Robot Operating System, which is really just a framework for wiring robot software, using their step-by-step guide for the Raspbian operating system.\cite{indigoins}
 A source installation had to be done, due to poor support for the Raspbian, and this resulted in an 6-8 hour long setup process, because of the need for compiling, building and testing of the whole system. 
-During the gathering of the different necessary packages needed for ROS, some unforeseen issues were encountered. Specifically, the GMapping package caused some issues, since it required Python 2.7.1 and upwards. Even though a python version fitting the requirement was installed by default on the Raspbian, the GMapping package would not recognize it. Through troubleshooting it was then discovered that GMapping was looking for Python-2.7.1-ubuntu, instead of the Python-2.7.1-debian that was installed together with the Raspbian operating system.
-%TODO: I would rephrase from 'During...' onwards. More clear sentances.
+During the gathering of the different packages needed for ROS, some unforeseen issues were encountered, like the GMapping package caused some issues, since it required Python 2.7.1 and upwards. Through troubleshooting it was then discovered that GMapping was looking for Python-2.7.1-ubuntu, instead of the Python-2.7.1-debian that was installed together with the Raspbian operating system.
 
 Instead of continuing to deal with the ROS issues on the Raspbian operating system, Ubuntu ARM was instead installed on the Raspberry Pi.\cite{ubuntuins}
 The installation process using Ubuntu ARM was much faster and more fluent compared to installing ROS on the Raspbian operating system, due to the much broader support for the Ubuntu distribution. The installation only took couple of hours, by using the built-in package manager and because no installation was required from source.\cite{ubuntuROS}
