--- a/report/citations.bib
+++ b/report/citations.bib
@@ -463,6 +463,16 @@
 	howpublished="\url{http://www.lulu.com/shop/r-patrick-goebel/ros-by-example-indigo-volume-1/ebook/product-22015937.html}"
 }
 
+@MISC{lidar360,
+	title={360 Lidar},
+	howpublished="\url{http://www.robotshop.com/en/rplidar-360-laser-scanner.html}"
+}
+
+@MISC{lidarl,
+	title={Lidar lite},
+	howpublished="\url{http://www.robotshop.com/en/lidar-lite-laser-rangefinder-pulsedlight.html}"
+}
+
 @MISC{ros,
 	title={ROS.org},
 	howpublished="\url{http://www.ros.org/install/}"
