Updated figure, fixed path errors due to code change

--- a/report/sections/appendix.tex
+++ b/report/sections/appendix.tex
@@ -4,7 +4,7 @@
 \clearpage
 
 \section{Code of laser sensor module}\label{code:laser-full}
-\lstinputlisting[firstline=37, title=mainCode.cpp, language=C++]{../code/laser_scan_publisher_tutorial/src/laser_scan_publisher.cpp}
+\lstinputlisting[firstline=37, title=main.cpp, language=C++]{../code/lidarlite_scan/src/main.cpp}
 
 %TODO: Any more code to add?
 
