--- a/report/sections/appendix.tex
+++ b/report/sections/appendix.tex
@@ -1,5 +1,5 @@
 \section{Code for close proximity detection}\label{code:proximity-full}
-\lstinputlisting[firstline=1, lastline=161, title=getdist(), language=Python, label=obs-avoid-code]{../code/autonomous-rover/obstacle-avoidance-args.py}
+\lstinputlisting[firstline=1, lastline=161, title=getdist(), language=Python]{../code/autonomous-rover/obstacle-avoidance-args.py}
 
 \clearpage
 
