--- a/report/sections/appendix.tex
+++ b/report/sections/appendix.tex
@@ -18,10 +18,15 @@ WiringPi library to be found here: \url{https://github.com/WiringPi/WiringPi}.
 \clearpage
 
 \section{General instruction for project}
+
+This meant to be a general guideline, an abstract overview of the necessary steps to be taken to replicate the project described in the report:
 \begin{itemize}
 	\item Install Ubuntu ARM on a Raspberry Pi 2 Model B (or newer, similar hardware configuration).
-	\item Install ROS Indigo distribution for Ubuntu ARM.
-	\item 
+	\item Install ROS Indigo distribution for Ubuntu ARM with desktop tools.
+	\item Clone code, install libraries, dependencies.
+	\item Setup nodes, run roscore, start necessary nodes.
+	\item Using rviz, visualize the generated map.
 \end{itemize}
+%TODO: Does this make sense? Remove completely or add more info?
 
 
