Chapter 1 peer review done

--- a/report/sections/ch1-intro.tex
+++ b/report/sections/ch1-intro.tex
@@ -7,7 +7,7 @@ We started out the project with a brainstorming session where we discussed diffe
 	\item Maze navigation
 \end{itemize}
 
-We could identify a common theme amongst these problems, which led us to the conclusion that the problem-domain should be within mapping and navigation. 
+We could identify a common theme amongst these problems, which led us to the conclusion that the problem-domain should be within \textit{mapping and navigation}. 
 
 \begin{figure}[!h]
 	\centering
@@ -25,6 +25,6 @@ Furthermore we decided to expand upon the problem-domain we set for ourselves an
 	\label{fig:level1}
 \end{figure}
 
-In this flowchart you can see the different approaches we can take to map different unknown terrains.
+In the flowchart above, it is possible to see the different approaches we could take to map different unknown terrains. The outcome of this flow chart came from a brainstorming session too, after some very initial research has been done within the problem-domain of \textit{mapping and navigation}.
 
-We decided to continue on with the selected problem-domain and started using a W-diagram model to expand upon it further and to identify the parts needed to be researched. This method will help us to come up with a solution to the problem at hand.
+Thereafter, we decided to continue on with the selected problem-domain and started using a W-diagram model to expand upon it further and to identify the parts needed to be researched. This method will help us to come up with a solution to the problem at hand.
